<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4"
    android:orientation="horizontal"
    >
llll

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/mygui"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:onClick="displayToast"
        android:layout_gravity="fill"
        android:text="@string/btn_txt"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="2"
        android:layout_rowWeight="2"
        android:layout_gravity="fill"
        android:text="@string/checkbox" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="3"
        android:layout_rowWeight="3"
        android:layout_columnWeight="1"
        app:srcCompat="@drawable/flag" />


    <Switch
        android:id="@+id/switch_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="2"
        android:layout_columnWeight="2"
        android:layout_gravity="fill"
        android:text="@string/switch1"
        />


    <EditText
        android:id="@+id/inputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type"
        android:inputType="textPersonName"
        android:layout_columnWeight="1"
        android:layout_rowWeight="4"
        android:gravity="fill"
        android:layout_columnSpan="2"/>


</GridLayout>